# CurrencyWar

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build_all.ps1  build_check.bat  vcpkg.json
.github/workflows/: release.yml
res/: debuff.txt  strategy.txt
res/ocr/: README.txt
src/: app.rc  main.cpp
src/core/: bot.cpp  bot.h  config.cpp  config.h  image_matcher.cpp  image_matcher.h  ocr_engine.cpp  ocr_engine.h  overlay.cpp  overlay.h  window_controller.cpp  window_controller.h
src/gui/: main_window.cpp  main_window.h
